[gd_scene load_steps=19 format=3 uid="uid://p7lfcxnhf5f1"]

[ext_resource type="PackedScene" uid="uid://dso6moookllac" path="res://player.tscn" id="1_ur14s"]
[ext_resource type="Script" path="res://world.gd" id="1_yvvro"]
[ext_resource type="PackedScene" uid="uid://cbltd6stx12ex" path="res://world_sections/section_1.tscn" id="2_y1eah"]
[ext_resource type="PackedScene" uid="uid://cfrhsaa47q5di" path="res://world_sections/section_2.tscn" id="3_1c655"]
[ext_resource type="Texture2D" uid="uid://bgidkcjpa6f88" path="res://addons/kenney_particle_pack/circle_01.png" id="3_qfkma"]
[ext_resource type="PackedScene" uid="uid://b5ead0ivmwwga" path="res://world_sections/section_3.tscn" id="4_422sv"]
[ext_resource type="MeshLibrary" uid="uid://7q4lk1x0ttk5" path="res://assets/custom_tiles.tres" id="7_gju57"]
[ext_resource type="FontFile" uid="uid://dm27yvic5org8" path="res://assets/TCM_____.TTF" id="7_mhd5s"]
[ext_resource type="Texture2D" uid="uid://b60m80wythgvs" path="res://assets/arrow.svg" id="7_wye8p"]
[ext_resource type="AudioStream" uid="uid://dvx6p2ip7x0u7" path="res://assets/Trance Music for Racing Game.mp3" id="9_no2iv"]
[ext_resource type="Script" path="res://player.gd" id="9_ww8op"]
[ext_resource type="AudioStream" uid="uid://cmc24tstd2yvo" path="res://assets/sizzle.wav" id="11_slnwq"]
[ext_resource type="AudioStream" uid="uid://bgwy3r50pi0bj" path="res://assets/falling.wav" id="13_hw01f"]
[ext_resource type="AudioStream" uid="uid://whqom74fq6bl" path="res://assets/fling.mp3" id="14_1yhek"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_pcqsf"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_ib31u"]
sky_material = SubResource("ProceduralSkyMaterial_pcqsf")

[sub_resource type="Environment" id="Environment_pop6r"]
background_mode = 2
sky = SubResource("Sky_ib31u")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_k0m74"]

[node name="Main" type="Node3D"]
script = ExtResource("1_yvvro")
world_sections = Array[PackedScene]([ExtResource("2_y1eah"), ExtResource("3_1c655"), ExtResource("4_422sv")])

[node name="HUD" type="CanvasLayer" parent="."]

[node name="MouseStartMarker" type="Sprite2D" parent="HUD"]
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_qfkma")

[node name="MouseEndMarker" type="Sprite2D" parent="HUD"]
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_qfkma")

[node name="OffScreenMarker" type="Sprite2D" parent="HUD"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_wye8p")

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FlingBar" type="ProgressBar" parent="HUD/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 28.0
offset_right = -32.0
offset_bottom = 366.0
grow_horizontal = 0
max_value = 1.0
fill_mode = 3
show_percentage = false

[node name="ScoreLabel" type="Label" parent="HUD/Control"]
layout_mode = 1
offset_left = 36.0
offset_top = 28.0
offset_right = 307.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("7_mhd5s")
theme_override_font_sizes/font_size = 50
text = "Score: 0"

[node name="Player" parent="." instance=ExtResource("1_ur14s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.40576, 0)
script = ExtResource("9_ww8op")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="Player"]
aabb = AABB(-0.145542, -0.121197, -0.12335, 0.291084, 0.242394, 0.2467)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_pop6r")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, -0.0332365, 0, -0.0120983)
light_angular_distance = 0.89
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, -7.41387e-08, 4.6327e-08, 0, 0.529919, 0.848048, -8.74228e-08, 0.848048, -0.529919, 0, 6, -2.5)
attributes = SubResource("CameraAttributesPractical_k0m74")
doppler_tracking = 2
fov = 90.0
size = 0.1
far = 100.0

[node name="HubWorld" type="Node3D" parent="."]

[node name="GridMap" type="GridMap" parent="HubWorld"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0.25, 0)
mesh_library = ExtResource("7_gju57")
cell_size = Vector3(1, 0.5, 1)
data = {
"cells": PackedInt32Array(-4, 65532, 0, -4, 65533, 0, -4, 65534, 0, -4, 65535, 0, -4, 0, 0, -4, 1, 0, -4, 2, 0, -4, 3, 0, -3, 65532, 0, -3, 65533, 0, -3, 65534, 0, -3, 65535, 0, -3, 0, 0, -3, 1, 0, -3, 2, 0, -3, 3, 0, -2, 65532, 0, -2, 65533, 0, -2, 65534, 0, -2, 65535, 0, -2, 0, 0, -2, 1, 0, -2, 2, 0, -1, 65532, 0, -1, 65533, 0, -1, 65534, 0, -1, 65535, 0, -1, 0, 0, -1, 1, 0, -1, 2, 0, -65536, 65532, 0, -65536, 65533, 0, -65536, 65534, 0, -65536, 65535, 0, -65536, 0, 0, -65536, 1, 0, -65536, 2, 0, -65535, 65532, 0, -65535, 65533, 0, -65535, 65534, 0, -65535, 65535, 0, -65535, 0, 0, -65535, 1, 0, -65535, 2, 0, -65534, 65532, 0, -65534, 65533, 0, -65534, 65534, 0, -65534, 65535, 0, -65534, 0, 0, -65534, 1, 0, -65534, 2, 0, -65533, 65532, 0, -65533, 65533, 0, -65533, 65534, 0, -65533, 65535, 0, -65533, 0, 0, -65533, 1, 0, -65533, 2, 0, 65539, 3, 0, 65539, 2, 0, 65539, 1, 0, 65539, 0, 0, 65539, 65535, 0, 65539, 65534, 0, 65539, 65533, 0, 65539, 65532, 0, 65538, 65532, 0, 65537, 65532, 0, 65536, 65532, 0, 131071, 65532, 0, 131070, 65532, 0, 131069, 65532, 0, 131068, 65532, 0, 131068, 3, 0, 131068, 2, 0, 131068, 1, 0, 131068, 0, 0, 131068, 65535, 0, 131068, 65534, 0, 131068, 65533, 0, 196611, 3, 0, 196611, 2, 0, 196611, 1, 0, 196611, 0, 0, 196611, 65535, 0, 196611, 65534, 0, 196611, 65533, 0, 196611, 65532, 0, 262140, 65532, 0, 262141, 65532, 0, 262142, 65532, 0, 262143, 65532, 0, 196608, 65532, 0, 196609, 65532, 0, 196610, 65532, 0, 262140, 3, 0, 262140, 2, 0, 262140, 1, 0, 262140, 0, 0, 262140, 65535, 0, 262140, 65534, 0, 262140, 65533, 0, 327683, 3, 0, 327683, 2, 0, 327683, 1, 0, 327683, 0, 0, 327683, 65535, 0, 327683, 65534, 0, 327683, 65533, 0, 327683, 65532, 0, 327682, 65532, 0, 327681, 65532, 0, 327680, 65532, 0, 393215, 65532, 0, 393214, 65532, 0, 393213, 65532, 0, 393212, 65532, 0, 393212, 65533, 0, 393212, 65534, 0, 393212, 65535, 0, 393212, 0, 0, 393212, 1, 0, 393212, 2, 0, 393212, 3, 0, -2, 3, 0, -1, 3, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0)
}
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="LinkMarker" type="Marker3D" parent="HubWorld"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="WorldSectionContainer" type="Node3D" parent="."]

[node name="FlingTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="DeathResetTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_no2iv")
volume_db = -10.0

[node name="SpikeHitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_slnwq")

[node name="FallingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_hw01f")
volume_db = -10.0

[node name="FlingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_1yhek")
volume_db = -10.0

[connection signal="screen_entered" from="Player/VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="Player/VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
[connection signal="timeout" from="FlingTimer" to="." method="_on_fling_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
